# taro

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  VM.md  build.sh  exe.bc  sample.tr  vm.md
src/: ast.h  error.h  lexer.c  lexer.h  main.c  parser.h
src/il_asm/: assemble.c  assemble.h
src/runtime/: _instructions.txt  bytecode.c  bytecode.h  disasm.c  disasm.h  frame.h  gc.c  gc.h  object.c  object.h  opcode.h  stackframe.h  value.c  value.h  vm.c  vm.h  vm_mem.c  vm_mem.h
src/util/: arena.h  common.h  error.h  file_io.h  hashtable.c  hashtable.h  logger.h
src/vm/: frame.h  gc.c  gc.h  opcode.h  value.c  value.h  vm.c  vm.h
